changed too get request

--- a/config.json
+++ b/config.json
@@ -4,6 +4,8 @@
   "requests_kwargs": {
 
     "headers": {
+      "Accept": "",
+
       "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36",
       "Referer": "https://buff.163.com/market/csgo",
       "X-Requested-With": "XMLHttpRequest"
