--- a/helpers/json/config.json
+++ b/helpers/json/config.json
@@ -8,7 +8,7 @@
       "Accept-Encoding": "gzip, deflate, br",
       "Accept-Language": "en-US,en;q=0.9",
       "Connection": "keep-alive",
-      "Cookie": "_____________________________",
+      "Cookie": "########################################",
       "Host": "buff.163.com",
       "Referer": "https://buff.163.com/market/csgo",
       "Sec-Fetch-Dest": "empty",
